Moving page title to configuration

--- a/app/code/Diggecard/Giftcard/view/frontend/templates/giftcard/index.phtml
+++ b/app/code/Diggecard/Giftcard/view/frontend/templates/giftcard/index.phtml
@@ -4,10 +4,10 @@
  * @copyright Copyright (c) 2019 Elogic (https://elogic.co)
  */
 ?>
-<h1>There is Diggecard Page...</h1>
-
 
 <?php /** @var \Diggecard\Giftcard\Block\Giftcard\Index $block */ ?>
+<h1><?php echo $block->getHeading()?></h1>
+
 <iframe id="diggecard-giftcard-iframe" allow="camera; microphone" src="<?php echo $block->getIframeSrc()?>" scrolling="no">
 </iframe>
 
