Error message style update

--- a/app/code/Diggecard/Giftcard/view/frontend/web/template/checkout/summary/giftcard.html
+++ b/app/code/Diggecard/Giftcard/view/frontend/web/template/checkout/summary/giftcard.html
@@ -7,7 +7,7 @@
         <div class="giftcard-invalid" data-bind="visible: qrInvalidError">This QR Code is invalid!</div>
         <div class="giftcard-invalid" data-bind="visible: cardViaCardError">Cannot purchase Gift Card via Gift Card!</div>
         <div class="giftcard-invalid" data-bind="visible: emptyGiftCard">Gift Card is empty!</div>
-        <div class="giftcard-invalid" data-bind="visible: noSuchGiftCard">No such Gift Card</div>
+        <div class="giftcard-invalid" data-bind="visible: noSuchGiftCard">No such Gift Card!</div>
     </div>
 
     <div id="giftcard-info" data-bind="visible: giftcardValid">
