--- a/view/frontend/templates/cart/item/default.phtml
+++ b/view/frontend/templates/cart/item/default.phtml
@@ -44,7 +44,7 @@ $canApplyMsrp = $helper->isShowBeforeOrderConfirm($product) && $helper->isMinima
                 <dl class="item-options">
                     <?php foreach ($_options as $_option) : ?>
                         <?php $_formatedOptionValue = $block->getFormatedOptionValue($_option) ?>
-                        <dt><?= $block->escapeHtml($_option['label']) ?></dt>
+                        <dt><?= $block->escapeHtml(__($_option['label'])) ?></dt>
                         <dd>
                             <?php if (isset($_formatedOptionValue['full_view'])): ?>
                                 <?= /* @escapeNotVerified */ $_formatedOptionValue['full_view'] ?>
@@ -57,7 +57,7 @@ $canApplyMsrp = $helper->isShowBeforeOrderConfirm($product) && $helper->isMinima
             <?php endif;?>
             <?php if ($messages = $block->getMessages()): ?>
                 <?php foreach ($messages as $message): ?>
-                    <div class="cart item message <?= /* @escapeNotVerified */ $message['type'] ?>"><div><?= $block->escapeHtml($message['text']) ?></div></div>
+                    <div class="cart item message <?= /* @escapeNotVerified */ $message['type'] ?>"><div><?= $block->escapeHtml(__($message['text'])) ?></div></div>
                 <?php endforeach; ?>
             <?php endif; ?>
             <?php $addInfoBlock = $block->getProductAdditionalInformationBlock(); ?>
