--- a/view/frontend/layout/checkout_index_index.xml
+++ b/view/frontend/layout/checkout_index_index.xml
@@ -3,7 +3,8 @@
 <!--        * @author DiggEcard Team-->
 <!--        * @copyright Copyright (c) 2019 DiggEcard (https://diggecard.com)-->
 <!--        */-->
-<page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
+<page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+      xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
     <body>
         <referenceBlock name="checkout.root">
             <arguments>
@@ -21,10 +22,15 @@
                                                         <item name="afterMethods" xsi:type="array">
                                                             <item name="children" xsi:type="array">
                                                                 <item name="diggecard_giftcard" xsi:type="array">
-                                                                    <item name="component"  xsi:type="string">Diggecard_Giftcard/js/view/checkout/summary/giftcard</item>
+                                                                    <item name="component" xsi:type="string">
+                                                                        Diggecard_Giftcard/js/view/checkout/summary/giftcard
+                                                                    </item>
                                                                     <item name="sortOrder" xsi:type="string">200</item>
                                                                     <item name="config" xsi:type="array">
-                                                                        <item name="diggecard_giftcard" xsi:type="string" translate="true">Diggecard Giftcard</item>
+                                                                        <item name="diggecard_giftcard"
+                                                                              xsi:type="string" translate="true">
+                                                                            Diggecard Giftcard
+                                                                        </item>
                                                                     </item>
                                                                 </item>
                                                             </item>
