--- a/view/frontend/layout/checkout_index_index.xml
+++ b/view/frontend/layout/checkout_index_index.xml
@@ -41,6 +41,28 @@
                                         </item>
                                     </item>
                                 </item>
+                                <item name="sidebar" xsi:type="array">
+                                    <item name="children" xsi:type="array">
+                                        <item name="summary" xsi:type="array">
+                                            <item name="children" xsi:type="array">
+                                                <item name="totals" xsi:type="array">
+                                                    <item name="children" xsi:type="array">
+                                                        <item name="diggecard_giftcard_discount" xsi:type="array">
+                                                            <item name="component" xsi:type="string">
+                                                                Diggecard_Giftcard/js/view/checkout/summary/diggecard-giftcard
+                                                            </item>
+                                                            <item name="sortOrder" xsi:type="string">30</item>
+                                                            <item name="config" xsi:type="array">
+                                                                <item name="template" xsi:type="string">Diggecard_Giftcard/checkout/summary/diggecard-giftcard</item>
+                                                                <item name="title" translate="true" xsi:type="string">Gift Card</item>
+                                                            </item>
+                                                        </item>
+                                                    </item>
+                                                </item>
+                                            </item>
+                                        </item>
+                                    </item>
+                                </item>
                             </item>
                         </item>
                     </item>
